# advanced-graphics-course

./: CMakeLists.txt  color.frag  color.vert  hw-template.cpp  hw1.cpp  hw2.cpp  hw3.cpp  hw4.cpp  hw4.frag  perps.cpp  project.cpp  project.frag  segments.cpp  template.cpp  textfile.cpp  texture.frag  texture.vert  vector.h
Slides2/: Slides_02_Drag_Draw_Menu.cp  Slides_02_Draw_Checkerboard.cp  Slides_02_Draw_Mouse_Click.cp  Slides_02_Draw_Rectangle_Aspect.cp  Slides_02_Draw_Rose.cp  Slides_02_Draw_Triangle.cp  Slides_02_Draw_nGon.cp  Slides_02_Draw_x_square.cp  Slides_02_Windows_Pan_Zoom.cp  Slides_02_Windows_to_Viewport.cp
Slides3/: Slides_03_STL_vectors_line_perps.cp  vector.h
Slides4/: Side_F.pbm  Slides_04_OpenGL_3D_Drawing.cp  Slides_04_OpenGL_Push_Pop_Matrices.cp  Slides_04_OpenGL_Rotation.cp  Slides_04_Scaling_around_MidPoint.cp  Slides_04_Texture_Mapping.cp  UAE.pbm
Slides5/: Slides_05_Color_Shader.cp  Slides_05_Flatten_Shader.cp  Slides_05_PerPixel_Lighting.cp  Slides_05_Simple_Shader.cp  Slides_05_Vertex_Lighting_Toon_Shader.cp  Slides_05_shader_communicate_myColor.cp  Tex01.ppm  Tex02.ppm  Tex03.ppm  color.vs  flatten.frag  flatten.vs  phong.frag  phong.vert  simple.frag  texture.frag  texture.vert  toon.frag  toon.vs  toonPixel.frag  toonPixel.vert
